# Manager

./: .gitattribute  .gitattributes  CMakeLists.txt  LICENSE  README.md
UML/Activity/: Login.puml
UML/Class/: UAC.puml  main.puml
UML/UseCase/: Login.puml
images/: eye-slash.xpm  eye.xpm  images.cpp
src/: db.inc.h  includes.h  main.cpp  main.h  ptree.inc.h  views.inc.h
src/Application/views/: manager.cpp  manager.h
src/Database/helpers/: dbU.cpp  dbU.h
src/Preferences/Database/views/: ConfigDatabaseConn.cpp  ConfigDatabaseConn.h
src/Preferences/helpers/: PrefsData.cpp  PrefsData.h
src/Preferences/models/: mPrefs.cpp  mPrefs.h
src/Preferences/views/: Preferences.cpp  Preferences.h
src/Tools/views/: ManualQuery.cpp  ManualQuery.h
src/UAC/controllers/: UACcDefault.cpp  UACcDefault.h
src/UAC/models/: UACmUsers.cpp  UACmUsers.h
src/UAC/views/: UACvLogin.cpp  UACvLogin.h
src/_main/: main_prefs.cpp  main_prefs.h
